<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:layout_marginStart="24dp"
    android:padding="6dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lf" />

    <TextView
        android:id="@+id/tv_lf"
        style="@style/text_normal"
        android:layout_marginStart="4dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freq" />

    <TextView
        android:id="@+id/tv_freq"
        style="@style/text_normal"
        android:layout_marginStart="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/since"
        android:layout_marginStart="4dp"/>

    <TextView
        android:id="@+id/tv_since"
        style="@style/text_normal"
        android:layout_marginStart="4dp" />

</LinearLayout>